src/objects/DailyReconciliationReportInstance__c.object
<CustomObject>
    <fields>
        <fullName>Daily_Reconciliation_Report__c</fullName>
        <label>Daily Reconciliation Report</label>
        <referenceTo>DailyReconciliationReport__c</referenceTo>
        <relationshipLabel>Daily Reconciliation Report Instances</relationshipLabel>
        <relationshipName>Daily_Reconciliation_Report_Instances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Daily Reconciliation Report Instances</relationshipLabel>
        <relationshipName>Daily_Reconciliation_Report_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reconciliation_Page__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_340, FIND( '/services', $Api.Partner_Server_URL_340)) + 'apex/SingleReconciliation?id=' + Quote__c, 'Reconcile' , '_blank')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reconciliation Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Daily Reconciliation Report Instances</relationshipLabel>
        <relationshipName>Daily_Reconciliation_Report_Instances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora_Subscription_Id__c</fullName>
        <label>Zuora Subscription Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Daily Reconciliation Report Instance</label>
    <nameField>
        <displayFormat>DRI-{000000}</displayFormat>
        <label>Daily Reconciliation Report Instance Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Reconciliation Report Instances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>